NIM/nvclip.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvclip-service
  namespace: nvclip
spec:
  selector:
    app: nvclip
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
