NIM/qdrant.https.route.term.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qdrant-route
  namespace: qdrant
spec:
  to:
    kind: Service
    name: qdrant-service
  port:
    targetPort: http
  tls:
    termination: edge
